feat: variables de entorno y configuración de CORS
